--- a/pages/Activity_3.1.ipynb
+++ b/pages/Activity_3.1.ipynb
@@ -8,12 +8,13 @@
    "source": [
     "import numpy as np\n",
     "import cv2\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import streamlit as st \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -93,11 +94,15 @@
     }
    ],
    "source": [
-    "# read the input image\n",
-    "img = cv2.imread('haha.png')\n",
-    "print(img)\n",
-    "img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "plt.imshow(img)"
+    "# file upload\n",
+    "uploaded_file = st.file_uploader(\"Choose an image\", type=[\"jpg\", \"jpeg\", \"png\"])\n",
+    "if uploaded_file is not None:\n",
+    "        # read image\n",
+    "        bytes_data = uploaded_file.read()\n",
+    "        nparr = np.frombuffer(bytes_data, np.uint8)\n",
+    "        img = cv2.imdecode(nparr, cv2.IMREAD_COLOR)\n",
+    "else:\n",
+    "    img = read_image (\"haha.jpg\")"
    ]
   },
   {
@@ -136,10 +141,10 @@
     "# disable x & y axis\n",
     "plt.axis('off')\n",
     "# show the resulting image\n",
-    "plt.imshow(translated_img)\n",
+    "st.image (translated_img)\n",
     "plt.show()\n",
     "# save the resulting image to disk\n",
-    "plt.imsave(\"roomba2.jpg\", translated_img)"
+    "plt.imsave(\"haha.jpg\", translated_img)"
    ]
   },
   {
@@ -190,7 +195,7 @@
    ],
    "source": [
     "plt.axis('off')\n",
-    "plt.imshow(rotated_img_)"
+    "st.image(rotated_img_)"
    ]
   },
   {
@@ -231,7 +236,7 @@
    "source": [
     "rotated_img_=cv2.warpAffine(img ,m_rotation_,(cols,rows))\n",
     "plt.axis('off')\n",
-    "plt.imshow(rotated_img_)"
+    "st.image(rotated_img_)"
    ]
   },
   {
@@ -273,7 +278,7 @@
    ],
    "source": [
     "plt.axis('off')\n",
-    "plt.imshow(scaled_img_)"
+    "st.image(scaled_img_)"
    ]
   },
   {
@@ -346,7 +351,7 @@
    ],
    "source": [
     "plt.axis('off')\n",
-    "plt.imshow(resized_img_)"
+    "st.image(resized_img_)"
    ]
   },
   {
@@ -400,7 +405,7 @@
    ],
    "source": [
     "plt.axis('off')\n",
-    "plt.imshow(resized_img_)"
+    "st.image(resized_img_)"
    ]
   },
   {
