--- a/pages/Activity_3.1.ipynb
+++ b/pages/Activity_3.1.ipynb
@@ -16,6 +16,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_image (path):\n",
+    "    img = cv2.imread (path)\n",
+    "    return cv2.cvtColor (img, cv2.COLOR_BGR2RGB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
