--- a/pages/Activity_3.1.ipynb
+++ b/pages/Activity_3.1.ipynb
@@ -152,10 +152,9 @@
     "# disable x & y axis\n",
     "plt.axis('off')\n",
     "# show the resulting image\n",
-    "st.image (translated_img)\n",
+    "st.image (translated_img,img)\n",
     "plt.show()\n",
-    "# save the resulting image to disk\n",
-    "plt.imsave(\"haha.jpg\", translated_img)"
+    "# save the resulting image to disk\n"
    ]
   },
   {
