--- a/pages/Activity_3.1.ipynb
+++ b/pages/Activity_3.1.ipynb
@@ -148,6 +148,14 @@
    ],
    "source": [
     "# apply a perspective transformation to the image\n",
+    "uploaded_file = st.file_uploader(\"Choose an image\", type=[\"jpg\", \"jpeg\", \"png\"])\n",
+    "if uploaded_file is not None:\n",
+    "        # read image\n",
+    "        bytes_data = uploaded_file.read()\n",
+    "        nparr = np.frombuffer(bytes_data, np.uint8)\n",
+    "        img = cv2.imdecode(nparr, cv2.IMREAD_COLOR)\n",
+    "else:\n",
+    "    img = read_image (\"haha.jpg\")\n",
     "translated_img = cv2.warpPerspective(img, M, (cols, rows))\n",
     "# disable x & y axis\n",
     "plt.axis('off')\n",
